# LynxLearn

./: .gitignore  BENCHMARK_EXPLANATION.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt
benchmark/: HOW_TO_RUN.md  README.md  benchmark_colab.ipynb  benchmark_linear.py  benchmark_neural_network.py  benchmark_nuclear.py  benchmark_runner.py
cloudbench/: benchmark.py
docs/: api.md  benchmarks.md  examples.md  mathematics.md
examples/: benchmark_nn.py  demo.py  neural_network_demo.py
lynxlearn/: __init__.py  _core.py
lynxlearn/linear_model/: __init__.py  _ard.py  _base.py  _bayesian.py  _elasticnet.py  _glm.py  _gradient.py  _huber.py  _isotonic.py  _lars.py  _lasso.py  _multitask.py  _ols.py  _omp.py  _polynomial.py  _quantile.py  _ransac.py  _ridge.py  _sgd.py  _svr.py  _theilsen.py  _weighted.py
lynxlearn/linear_model/_fast/: __init__.py  _linear_fast.py  _solvers.py
lynxlearn/metrics/: __init__.py  _regression.py
lynxlearn/model_selection/: __init__.py  _split.py
lynxlearn/neural_network/: __init__.py  _base.py  _sequential.py
lynxlearn/neural_network/initializers/: __init__.py  _initializers.py
lynxlearn/neural_network/layers/: __init__.py  _base.py  _dense.py
lynxlearn/neural_network/losses/: __init__.py  _base.py  _mse.py
lynxlearn/neural_network/optimizers/: __init__.py  _adam.py  _base.py  _lbfgs.py  _sgd.py
lynxlearn/visualizations/: __init__.py  _gradient_descent.py  _model_comparison.py  _plots.py  _regression_analysis.py  _regularization.py
tests/: __init__.py  conftest.py  run_tests.py  test_linear_model.py  test_metrics.py  test_model_selection.py  test_visualizations.py
tests/test_neural_network/: __init__.py  test_integration.py  test_layers.py  test_losses.py  test_optimizers.py
