[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynxlearn"
version = "0.2.0"
description = "A simple, educational machine learning library built from scratch using NumPy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "lousybook01", email = "lousybook01@gmail.com"}
]
maintainers = [
    {name = "lousybook01", email = "lousybook01@gmail.com"}
]
keywords = [
    "machine-learning",
    "linear-regression",
    "educational",
    "numpy",
    "ml",
    "learning",
    "regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]
all = [
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/notlousybook/LynxLearn"
Documentation = "https://github.com/notlousybook/LynxLearn#readme"
Repository = "https://github.com/notlousybook/LynxLearn.git"
Issues = "https://github.com/notlousybook/LynxLearn/issues"
YouTube = "https://youtube.com/channel/UCBNE8MNvq1XppUmpAs20m4w"

[tool.setuptools]
packages = ["lynxlearn", "lynxlearn.linear_model", "lynxlearn.model_selection", "lynxlearn.metrics", "lynxlearn.visualizations"]

[tool.setuptools.package-data]
lynxlearn = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
